# kalahari

./: .gitignore  .prettierignore  .release-source-commit  CONTRIBUTING.md  LICENSE  README.md  SECRETS.md  package.json  tsconfig.json
rust/: Cargo.toml  about-notices.hbs  about.toml  clippy.toml  deny.toml
rust/.cargo/: config.toml
rust/crates/amla-container/: Cargo.toml  README.md
rust/crates/amla-container-engine/: Cargo.toml
rust/crates/amla-container-engine/src/: lib.rs
rust/crates/amla-container-store/: Cargo.toml
rust/crates/amla-container-store/src/: lib.rs
rust/crates/amla-container/src/: lib.rs
rust/crates/amla-container/tests/: container.rs
rust/crates/amla-guest/: Cargo.toml
rust/crates/amla-guest/src/: exec.rs  hardening.rs  init.rs  main.rs  oci.rs
rust/crates/amla-oci/: Cargo.toml
rust/crates/amla-oci/src/: docker_daemon.rs  erofs.rs  lib.rs  media_types.rs  progress.rs  reference.rs  registry.rs
rust/crates/amla-vm-boot/: Cargo.toml  README.md
rust/crates/amla-vm-boot/src/: boot_memory.rs  lib.rs
rust/crates/amla-vm-composite-fs/: Cargo.toml  README.md
rust/crates/amla-vm-composite-fs/src/: hlist.rs  lib.rs  mounted.rs  multi_fixed.rs  overlay.rs
rust/crates/amla-vm-constants/: Cargo.toml  README.md
rust/crates/amla-vm-constants/src/: lib.rs  net.rs  num.rs  protocol.rs
rust/crates/amla-vm-core/: Cargo.toml  README.md
rust/crates/amla-vm-core/src/: backends.rs  lib.rs  memory.rs  net.rs  vcpu.rs  vcpu_factory.rs  worker_process.rs
rust/crates/amla-vm-cowtree/: Cargo.toml  README.md
rust/crates/amla-vm-cowtree/include/: cowtree.h
rust/crates/amla-vm-cowtree/src/: ioctl.rs  lib.rs
rust/crates/amla-vm-erofs/: Cargo.toml  README.md
rust/crates/amla-vm-erofs/benches/: erofs_throughput.rs
rust/crates/amla-vm-erofs/src/: builder.rs  entry.rs  error.rs  lib.rs  ondisk.rs  reader.rs
rust/crates/amla-vm-erofs/tests/: roundtrip.rs
rust/crates/amla-vm-fuse/: Cargo.toml  README.md
rust/crates/amla-vm-fuse-abi/: Cargo.toml  README.md
rust/crates/amla-vm-fuse-abi/src/: lib.rs
rust/crates/amla-vm-fuse/src/: fs_types.rs  fuse.rs  lib.rs  null.rs
rust/crates/amla-vm-gic/: Cargo.toml
rust/crates/amla-vm-gic/src/: consts.rs  cpu_interface.rs  delivery.rs  distributor.rs  irq_state.rs  lib.rs  pod_state.rs  priority.rs  redistributor.rs  snapshot.rs
rust/crates/amla-vm-guest-rootfs/: Cargo.toml  KERNEL-SOURCE.md  README.md  build.rs
rust/crates/amla-vm-guest-rootfs/kernel/: Makefile
rust/crates/amla-vm-guest-rootfs/src/: lib.rs  rootfs_builder.rs
rust/crates/amla-vm-hvf/: ARCHITECTURE.md  Cargo.toml  README.md  VM_SPACES_ANALYSIS.md
rust/crates/amla-vm-hvf/src/: device_waker.rs  error.rs  ffi.rs  irq.rs  layout.rs  lib.rs  pools.rs  protocol.rs  stubs.rs  vm.rs
rust/crates/amla-vm-hyperv/: Cargo.toml  README.md
rust/crates/amla-vm-hyperv/src/: lib.rs
rust/crates/amla-vm-interceptor/: Cargo.toml  README.md
rust/crates/amla-vm-interceptor/src/: lib.rs
rust/crates/amla-vm-ipc/: Cargo.toml  PLAN-platform-native-ipc.md  README.md
rust/crates/amla-vm-ipc-derive/: Cargo.toml  README.md
rust/crates/amla-vm-ipc-derive/src/: lib.rs
rust/crates/amla-vm-ipc/benches/: ipc_channel.rs
rust/crates/amla-vm-ipc/src/: aux_frame.rs  channel.rs  codec.rs  lib.rs
rust/crates/amla-vm-ipc/tests/: cancel_safety.rs  ring_stress.rs  roundtrip.rs  transport.rs
rust/crates/amla-vm-kvm/: Cargo.toml  README.md  build.rs
rust/crates/amla-vm-kvm/src/: device_waker.rs  error.rs  lib.rs  shell.rs  vcpu.rs
rust/crates/amla-vm-mem/: Cargo.toml  README.md
rust/crates/amla-vm-mem/src/: backing.rs  error.rs  handle.rs  lib.rs
rust/crates/amla-vm-policy-net/: Cargo.toml  README.md
rust/crates/amla-vm-policy-net/src/: config.rs  connection_table.rs  evidence.rs  lib.rs  manager.rs  packet.rs  policy.rs
rust/crates/amla-vm-policy-net/tests/: public_api.rs
rust/crates/amla-vm-redbfs/: Cargo.toml  README.md
rust/crates/amla-vm-redbfs/benches/: redbfs_throughput.rs
rust/crates/amla-vm-redbfs/src/: lib.rs
rust/crates/amla-vm-ringbuf/: Cargo.toml  README.md
rust/crates/amla-vm-ringbuf/benches/: throughput.rs
rust/crates/amla-vm-ringbuf/src/: lib.rs
rust/crates/amla-vm-scheduler/: Cargo.toml
rust/crates/amla-vm-scheduler/src/: lib.rs
rust/crates/amla-vm-scheduler/tests/: api_parity.rs  network_continuity.rs  scheduler.rs
rust/crates/amla-vm-stub/: Cargo.toml  README.md
rust/crates/amla-vm-stub/src/: lib.rs
rust/crates/amla-vm-synthesized-fs/: Cargo.toml  README.md
rust/crates/amla-vm-synthesized-fs/src/: lib.rs
rust/crates/amla-vm-tls-parse/: Cargo.toml  README.md
rust/crates/amla-vm-tls-parse/src/: lib.rs
rust/crates/amla-vm-tls-proxy-net/: Cargo.toml  README.md
rust/crates/amla-vm-tls-proxy-net/proptest-regressions/: http.txt
rust/crates/amla-vm-tls-proxy-net/src/: ca.rs  handler.rs  lib.rs  peek.rs  policy.rs  timeout.rs
rust/crates/amla-vm-usernet/: Cargo.toml  README.md
rust/crates/amla-vm-usernet/src/: config.rs  device.rs  dhcp.rs  dns.rs  guest_output.rs  guest_packet.rs  icmp.rs  lib.rs  nat.rs  packet_builder.rs  state.rs  tests.rs  udp_proxy.rs
rust/crates/amla-vm-usernet/tests/: tcp_proxy_bugs.rs  tls_mitm.rs
rust/crates/amla-vm-virtio/: Cargo.toml  README.md
rust/crates/amla-vm-virtio-console/: Cargo.toml  README.md
rust/crates/amla-vm-virtio-console/src/: lib.rs  tests.rs
rust/crates/amla-vm-virtio-fs/: Cargo.toml  README.md
rust/crates/amla-vm-virtio-fs/src/: lib.rs  tests.rs
rust/crates/amla-vm-virtio-mmio/: Cargo.toml  README.md
rust/crates/amla-vm-virtio-mmio/src/: lib.rs  tests.rs  transport.rs
rust/crates/amla-vm-virtio-net/: Cargo.toml  README.md
rust/crates/amla-vm-virtio-net/src/: lib.rs  tests.rs
rust/crates/amla-vm-virtio-pmem/: Cargo.toml  README.md
rust/crates/amla-vm-virtio-rng/: Cargo.toml  README.md
rust/crates/amla-vm-virtio-rng/src/: lib.rs  (+1 more)
rust/crates/amla-vm-vmm/: Cargo.toml  README.md
rust/crates/kalahari/: Cargo.toml  build.rs
rust/tools/: ar-aarch64-macos.sh  cargo-cross-build.sh  link-and-sign.sh  zig-cc-aarch64-macos.sh
(+216 files in other folders)
