[package]
name = "amla-container-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reusable container engine: image resolution, VM boot, overlay capture"

[dependencies]
amla-container.workspace = true
amla-container-store.workspace = true
amla-vm-core.workspace = true
amla-vm-vmm.workspace = true
amla-vm-fuse.workspace = true
amla-vm-erofs.workspace = true
amla-vm-redbfs.workspace = true
amla-vm-composite-fs.workspace = true
amla-vm-usernet.workspace = true
amla-vm-interceptor.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
amla-vm-guest-rootfs.workspace = true

[dev-dependencies]
amla-vm-erofs.workspace = true
amla-vm-guest-rootfs.workspace = true
tempfile.workspace = true
env_logger.workspace = true

[lints]
workspace = true
