[package]
name = "amla-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OCI image importer — pulls from registries and Docker daemon into a container store"

[dependencies]
amla-container-store.workspace = true
amla-vm-erofs.workspace = true
anyhow.workspace = true
flate2.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "net", "process"] }
tokio-util = { workspace = true, features = ["io", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
