[package]
name = "amla-vm-cowtree"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust bindings for cowtree - branching CoW memory for VM snapshots"

[lib]
name = "amla_cowtree"

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
log.workspace = true
rustix = { workspace = true, features = ["mm", "param"] }
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
