[package]
name = "amla-vm-erofs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EROFS image builder and reader — pure Rust"

[lib]
name = "amla_erofs"

[dependencies]
amla-vm-constants.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
sha2.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "erofs_throughput"
harness = false

[lints]
workspace = true
