[package]
name = "amla-vm-mem"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform guest memory backing: CoW branching and snapshot"

[lib]
name = "amla_mem"

[dependencies]
log.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["event", "mm", "fs", "param", "process"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
amla-vm-cowtree.workspace = true
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
amla-vm-constants.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_SystemInformation"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
